# gazebo-ros2-template

./: .gitpod.yml  README.md
src/plain_vehicle_control/: CMakeLists.txt  README.md  package.xml
src/plain_vehicle_control/config/: controller.yaml
src/plain_vehicle_control/include/plain_vehicle_control/: effort_node.hpp  visibility_control.h
src/plain_vehicle_control/launch/: plain_vehicle_control.launch.py
src/plain_vehicle_control/src/: effort_node.cpp  effort_node.hpp  main.cpp
src/plain_vehicle_control/urdf/: plain_vehicle.urdf
src/plain_vehicle_description/: README.md  package.xml  setup.cfg  setup.py
src/plain_vehicle_description/launch/: display.launch.py  gazebo.launch.py
src/plain_vehicle_description/meshes/: base_link.stl  wheel_fl_1.stl  wheel_fr_1.stl  wheel_rl_1.stl  wheel_rr_1.stl
src/plain_vehicle_description/urdf/: materials.xacro  plain_vehicle.gazebo  plain_vehicle.trans  plain_vehicle.xacro
src/tricycle_control/: CMakeLists.txt  README.md  package.xml
src/tricycle_control/config/: controller.yaml
src/tricycle_control/include/tricycle_control/: control_node.hpp  visibility_control.h
src/tricycle_control/launch/: tricycle_control.launch.py
src/tricycle_control/src/: control_node.cpp
src/tricycle_control/urdf/: tricycle.urdf
src/tricycle_description/: README.md  package.xml  setup.cfg  setup.py
src/tricycle_description/launch/: display.launch.py  gazebo.launch.py
src/tricycle_description/meshes/: base_link.stl  f_link_1.stl  r_link_1.stl  r_link_2.stl  wheel_link_1.stl  wheel_link_2.stl  wheel_link_3.stl
src/tricycle_description/urdf/: materials.xacro  tricycle.gazebo  tricycle.trans  tricycle.xacro
